# ida-ios-helper

./: .gitignore  README.md  ioshelper.cfg.example  pyproject.toml  vermin.ini
.claude/skills/probe-ida-function/: SKILL.md
src/ioshelper/: core.py
src/ioshelper/base/: config.py  log.py  reloadable_plugin.py
src/ioshelper/debug/: __init__.py  dump_ctree.py  dump_pseudocode.py
src/ioshelper/plugins/common/: globals.py  run_callback.py
src/ioshelper/plugins/common/clang_blocks/: __init__.py  components.py  optimize_blocks_init.py  optimizer.py
src/ioshelper/plugins/common/jump_to_string/: __init__.py
src/ioshelper/plugins/common/outline/: __init__.py
src/ioshelper/plugins/common/range_condition/: __init__.py  range_condition.py
src/ioshelper/plugins/common/segment_xrefs/: __init__.py  segment_xrefs.py
src/ioshelper/plugins/dsc/baseline_modules/: __init__.py  baseline.py
src/ioshelper/plugins/dsc/organize_functions/: __init__.py  organize_functions.py
src/ioshelper/plugins/dsc/stub_calls/: __init__.py  optimizer.py
src/ioshelper/plugins/dsc/stub_modules/: __init__.py  reporter.py
src/ioshelper/plugins/kernelcache/cpp_vtbl/: __init__.py  cpp_vtbl.py
src/ioshelper/plugins/kernelcache/func_renamers/: __init__.py  func_renamers.py  renamer.py  visitor.py
src/ioshelper/plugins/kernelcache/generic_calls_fix/: __init__.py
src/ioshelper/plugins/kernelcache/kalloc_type/: __init__.py  kalloc_type.py
src/ioshelper/plugins/kernelcache/obj_this/: __init__.py
src/ioshelper/plugins/objc/objc_arg_renamer/: __init__.py  hook.py  renamer.py
src/ioshelper/plugins/objc/objc_getter_setter/: __init__.py  hook.py  renamer.py
src/ioshelper/plugins/objc/objc_lvar_renamer/: __init__.py  args_source.py  call_sources.py  heuristics.py  hook.py  options.py  pipeline.py  renamer.py
src/ioshelper/plugins/objc/objc_msgsend_args/: __init__.py  optimizer.py
src/ioshelper/plugins/objc/objc_optimizers/: __init__.py  _base.py  _match.py  objc_arc.py  objc_calls.py  objc_properties.py
src/ioshelper/plugins/objc/objc_ref/: __init__.py  objc_xref.py
src/ioshelper/plugins/objc/objc_refcnt/: optimizer.py
src/ioshelper/plugins/objc/objc_sugar/: __init__.py  objc_msgsend.py  objc_opt.py  objc_sugar.py  (+2 more)
src/scripts/: field_search.py  fix_dyld_xrefs.py  idat_ipc_client.py  idat_ipc_launch.sh  idat_ipc_server.py  probe_func.py  probe_func.sh
(+25 files in other folders)
