[project]
name = "ida-ios-helper"
dynamic = ['version']
description = "IDA Plugin for ease the reversing of iOS' usermode and kernelcache."
authors = [
    { name = "Yoav Sternberg", email = "yoav.sternberg@gmail.com" },
]
readme = "README.md"
repository = "https://github.com/yoavst/ida-ios-helper"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

requires-python = ">=3.11"
dependencies = [
    "idahelper",
]

[project.urls]
Homepage = "https://github.com/yoavst/ida-ios-helper"
Issues = "https://github.com/yoavst/ida-ios-helper/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/ioshelper"]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "vermin>=1.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 180
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # pydocstyle: summary on its own line after the opening quotes (overrides Google's D212)
    "D213",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Asserts
    "S101",
    # Name for classes
    "N801",
    # Custom error classes
    "TRY003"
]

# Google convention, but with the summary on its own line after the opening quotes
# (D213) rather than on the first line (D212). Only D213 is enforced; the convention is
# declared so the rest of the Google docstring rules stay consistent if enabled later.
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[tool.uv.sources]
idahelper = { path = "../idahelper", editable = true }
